--- a/reactSprint/11_6_23/assignments/package.json
+++ b/reactSprint/11_6_23/assignments/package.json
@@ -13,6 +13,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "react-scripts start --watch",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
