--- a/javaSprint/springCore/pom.xml
+++ b/javaSprint/springCore/pom.xml
@@ -20,5 +20,12 @@
           <artifactId>spring-beans</artifactId>
           <version>5.3.30</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.30</version>
+          <scope>provided</scope>
+      </dependency>
   </dependencies>
 </project>
