tinkering w/ security in Spring Boot, oauth2

--- a/elp/src/main/resources/application.properties
+++ b/elp/src/main/resources/application.properties
@@ -6,3 +6,8 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+#spring.security.user.name=admin
+#spring.security.user.password=a4584220-7bf0-4366-a40a-37ba3ac0ea41
+
+#spring.security.oauth2.client.registration.github.client-id=Iv1.b8e2ed540020017b
+#spring.security.oauth2.client.registration.github.client-secret=f15803c07027288587baf41f48862902b350ae26
